test/errors/ease-type.rom
Error in `ease-type.asm` on line 2: Invalid easing type `niceAndSlow`
